bugs e contraste

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -140,7 +140,7 @@ main h1{
 
 .models-item--price {
     font-size:15px;
-    color:#333;
+    color:rgb(0, 0, 0);
     margin-top:5px;
 }
 
@@ -153,7 +153,7 @@ main h1{
 
 .models-item--desc {
     font-size:13px;
-    color:#555;
+    color:rgb(0, 0, 0);
     margin-top:10px;
 }
 
